--- a/popup.css
+++ b/popup.css
@@ -66,7 +66,7 @@ h4 {
 button {
   background: #ff9900;
   color: #fff;
-  border: none;
+  border: 1.5px solid #ff9900;
   border-radius: 6px;
   padding: 8px 16px;
   margin: 4px 2px;
@@ -76,7 +76,9 @@ button {
 }
 button:hover,
 button:focus {
-  background: #ff9900;
+  background: #e3f0fc;
+  color: #ff9900;
+    border: 1.5px solid #ff9900;
 }
 
 #back {
@@ -90,7 +92,6 @@ button:focus {
 }
 
 #paste-section {
-  margin-top: 18px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -107,7 +108,8 @@ button:focus {
 }
 #show-paste-box:hover,
 #show-paste-box:focus {
-  background: #e3f0fc;
+  background: #ff9900;
+  color: #fff;
 }
 
 #paste-box {
@@ -130,11 +132,17 @@ button:focus {
   align-self: center;
   background: #ff9900;
   color: #fff;
-  border: none;
+  border: 1.5px solid #ff9900;
   border-radius: 6px;
   padding: 7px 16px;
   font-size: 14px;
   margin-left: 0;
+}
+#preview-paste:hover,
+#preview-paste:focus{
+  background: #e3f0fc;
+  color: #ff9900;
+  border: 1.5px solid #ff9900;
 }
 
 p {
