--- a/popup.css
+++ b/popup.css
@@ -1,3 +1,8 @@
+html, body {
+  max-height: 500px;
+  overflow-y: auto;
+}
+
 body {
   font-family: "Alata", Arial, sans-serif;
   min-width: 320px;
